@@ -11,22 +11,26 @@ extern "C" {
 #define DI_CHANNEL_WRITE 2
 #define DI_READ_SPOOL_JOB 3
 #define	FORM_BUILTIN	1
-#define	JOB_CONTROL_PAUSE	1
-#define	JOB_CONTROL_RESUME	2
-#define	JOB_CONTROL_CANCEL	3
-#define	JOB_CONTROL_RESTART	4
-#define	JOB_CONTROL_DELETE	5
-#define	JOB_STATUS_PAUSED	1
-#define	JOB_STATUS_ERROR	2
-#define	JOB_STATUS_DELETING	4
-#define	JOB_STATUS_SPOOLING	8
-#define	JOB_STATUS_PRINTING	16
-#define	JOB_STATUS_OFFLINE	32
-#define	JOB_STATUS_PAPEROUT	0x40
-#define	JOB_STATUS_PRINTED	0x80
-#define	JOB_STATUS_DELETED	0x100
-#define	JOB_STATUS_BLOCKED_DEVQ	0x200
+#define	JOB_CONTROL_PAUSE		1
+#define	JOB_CONTROL_RESUME		2
+#define	JOB_CONTROL_CANCEL		3
+#define	JOB_CONTROL_RESTART		4
+#define	JOB_CONTROL_DELETE		5
+#define	JOB_CONTROL_SENT_TO_PRINTER	6
+#define	JOB_CONTROL_LAST_PAGE_EJECTED	7
+#define	JOB_STATUS_PAUSED		0x1
+#define	JOB_STATUS_ERROR		0x2
+#define	JOB_STATUS_DELETING		0x4
+#define	JOB_STATUS_SPOOLING		0x8
+#define	JOB_STATUS_PRINTING		0x10
+#define	JOB_STATUS_OFFLINE		0x20
+#define	JOB_STATUS_PAPEROUT		0x40
+#define	JOB_STATUS_PRINTED		0x80
+#define	JOB_STATUS_DELETED		0x100
+#define	JOB_STATUS_BLOCKED_DEVQ		0x200
 #define	JOB_STATUS_USER_INTERVENTION	0x400
+#define	JOB_STATUS_RESTART		0x800
+#define	JOB_STATUS_COMPLETE		0x1000
 #define	JOB_POSITION_UNSPECIFIED	0
 #define	JOB_NOTIFY_TYPE	1
 #define	JOB_NOTIFY_FIELD_PRINTER_NAME	0
