@@ -1,3 +1,7 @@
+2006-03-09  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+	* include/winspool.h (JOB_CONTROL_*,JOB_STATUS_*): Define.
+	Thanks to:   Roland Schwingel <rolandschwingel at users dot sf dot net>
+
 2006-03-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
 	* include/shellapi.h  [_WIN32_IE >= 0x0600]
 	(SEE_MASK_NOZONECHECKS,SEE_MASK_FLAG_LOG_USAGE): Define on
